# strict-cpp

./: .clang-format  .gitignore  LICENSE  README.md  meson.build  meson.options
examples/: alias-example.cpp  meson.build  output-example.cpp  use-case-example.cpp
include/: strict-cpp.hpp
include/strict_types/: alias.hpp  common.hpp  concepts.hpp  float.hpp  integral.hpp  macros.hpp
