option(
   'namespace',
   type: 'string',
   value: 'strict',
   description: 'The namespace for strict types.',
)

option(
   'enable_extra_types',
   type: 'boolean',
   value: false,
   description: 'If pre-defined extra types should be exposed.',
)

option(
   'build_examples',
   type: 'boolean',
   value: false,
   description: 'If examples should be built.',
)